--- a/Samson_Anthony_AmazonEDA.ipynb
+++ b/Samson_Anthony_AmazonEDA.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "w6K7xa23Elo4"
+        "mDgbUHAGgjLW"
       ],
       "include_colab_link": true
     },
@@ -88,7 +88,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Provide your GitHub Link here."
+        "https://github.com/samsonroni-14/AmazonEDA"
       ],
       "metadata": {
         "id": "h1o69JH3Eqqn"
@@ -292,11 +292,11 @@
       "cell_type": "code",
       "source": [
         "# First view of the datasets\n",
-        "#Credits\n",
+        "#Titles\n",
         "print(data1.head())\n",
         "print(data1.tail())\n",
         "\n",
-        "#Titles\n",
+        "#Credits\n",
         "print(data2.head())\n",
         "print(data2.tail())"
       ],
@@ -706,7 +706,7 @@
         "id": "3q5wnI3om9sJ",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 383
+          "height": 430
         },
         "outputId": "0a48bc07-72d8-4b5c-ba05-adbe7929376f"
       },
@@ -956,7 +956,7 @@
         "id": "zms12Yq5n-jE",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
+          "height": 591
         },
         "outputId": "1e3df42d-dc25-426c-c8b5-3be63fe9bcac"
       },
@@ -1094,7 +1094,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 275
+          "height": 277
         },
         "id": "YUFXFJEJ2ovH",
         "outputId": "186acc8f-c5bf-42a7-ab26-c3ed763a1e64"
@@ -1543,6 +1543,15 @@
     {
       "cell_type": "markdown",
       "source": [
+        "##### **Univariate Analysis**"
+      ],
+      "metadata": {
+        "id": "K5QIfhjmsQ_k"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "#### BOX PLOT"
       ],
       "metadata": {
@@ -1862,6 +1871,15 @@
       ],
       "metadata": {
         "id": "zfJ8IqMcYoAp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Bivariate Analysis**"
+      ],
+      "metadata": {
+        "id": "uFazJea2sb-4"
       }
     },
     {
@@ -2304,6 +2322,15 @@
       ],
       "metadata": {
         "id": "xvSq8iUTphqO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##### **Multivariate Analysis**"
+      ],
+      "metadata": {
+        "id": "OwE1YIgast4-"
       }
     },
     {
